--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,7 +5,7 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:spring-context*.xml</param-value>
   </context-param>
-	<!-- 获取web上下文 -->
+	<!-- 获取web上下文11 -->
   <listener>
     <listener-class>com.jeeplus.modules.sys.listener.WebContextListener</listener-class>
   </listener>
