--- a/src/main/resources/jeeplus.properties
+++ b/src/main/resources/jeeplus.properties
@@ -44,7 +44,7 @@ redis.port=6379
 #============================#
 
 #\u4ea7\u54c1\u4fe1\u606f\u8bbe\u7f6e
-productName=JeePlus \u5feb\u901f\u5f00\u53d1\u5e73\u53f0
+productName=IVMS\u667A\u80FD\u8F66\u8F86\u7BA1\u7406\u7CFB\u7EDF
 copyrightYear=2014
 version=V1.2.6
 
